; ModuleID = '/home/carl/AnghaBench/linux/drivers/edac/extr_edac_pci_sysfs.c_edac_pci_dev_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/edac/extr_edac_pci_sysfs.c_edac_pci_dev_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { i32 }
%struct.attribute = type { i32 }
%struct.edac_pci_dev_attribute = type { i32, i32 (i32, i8*, i64)* }

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kobject*, %struct.attribute*, i8*, i64)* @edac_pci_dev_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @edac_pci_dev_store(%struct.kobject* %0, %struct.attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.kobject*, align 8
  %7 = alloca %struct.attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.edac_pci_dev_attribute*, align 8
  store %struct.kobject* %0, %struct.kobject** %6, align 8
  store %struct.attribute* %1, %struct.attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load %struct.attribute*, %struct.attribute** %7, align 8
  %12 = bitcast %struct.attribute* %11 to %struct.edac_pci_dev_attribute*
  store %struct.edac_pci_dev_attribute* %12, %struct.edac_pci_dev_attribute** %10, align 8
  %13 = load %struct.edac_pci_dev_attribute*, %struct.edac_pci_dev_attribute** %10, align 8
  %14 = getelementptr inbounds %struct.edac_pci_dev_attribute, %struct.edac_pci_dev_attribute* %13, i32 0, i32 1
  %15 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %14, align 8
  %16 = icmp ne i32 (i32, i8*, i64)* %15, null
  br i1 %16, label %17, label %27

17:                                               ; preds = %4
  %18 = load %struct.edac_pci_dev_attribute*, %struct.edac_pci_dev_attribute** %10, align 8
  %19 = getelementptr inbounds %struct.edac_pci_dev_attribute, %struct.edac_pci_dev_attribute* %18, i32 0, i32 1
  %20 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %19, align 8
  %21 = load %struct.edac_pci_dev_attribute*, %struct.edac_pci_dev_attribute** %10, align 8
  %22 = getelementptr inbounds %struct.edac_pci_dev_attribute, %struct.edac_pci_dev_attribute* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = call i32 %20(i32 %23, i8* %24, i64 %25)
  store i32 %26, i32* %5, align 4
  br label %30

27:                                               ; preds = %4
  %28 = load i32, i32* @EIO, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %27, %17
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
